# HolonNPU

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
docs/: ARCHITECTURE.md  DECISIONS.md  GETTING_STARTED.md  INTERFACE.md  INTERFACE_REFERENCE.md  ISA.md  ISA_REFERENCE.md  PROGRESS.md  ROADMAP.md  V2_ARCHITECTURE.md  V2_INTERFACE.md  V2_INTERFACE_REFERENCE.md  V2_ISA.md  V2_ISA_REFERENCE.md  VERIFICATION.md
include/: README.md  holon_npu_desc.h  holon_npu_isa.h  holon_npu_program.h  holon_npu_regs.h  holon_npu_runtime.hpp  my_npu_desc.h  my_npu_regs.h
rtl/command/: npu_command_processor.sv  npu_command_processor_test_top.sv
rtl/common/: npu_assert.svh  npu_axi4_if.sv  npu_axi_lite_if.sv  npu_common_smoke_top.sv  npu_fifo.sv  npu_isa_pkg.sv  npu_pkg.sv  npu_register_slice.sv  npu_skid_buffer.sv  npu_v2_pkg.sv  npu_vr_if.sv
rtl/control/: npu_completion_writer.sv  npu_control_regs.sv  npu_program_loader.sv  npu_v2_completion_writer.sv  npu_v2_control_regs.sv  npu_v2_program_loader.sv
rtl/datapath/: npu_banked_scratchpad.sv  npu_c_accum_buffer.sv  npu_gemm_tile_scratchpad.sv  npu_i8_tile_buffer.sv  npu_ping_pong_ctrl.sv  npu_tile_mask.sv  npu_tiling_datapath_test_top.sv
rtl/dma/: npu_axi4_read_dma.sv  npu_axi4_write_dma.sv  npu_axi4_write_dma_test_wrapper.sv  npu_dma_fabric.sv  npu_read_dma_test_top.sv  npu_v2_dma_fabric.sv  npu_write_dma_test_top.sv
rtl/frontend/: npu_frontend_if.sv  npu_reference_frontend.sv
rtl/integration/: npu_axi_write_arbiter.sv  npu_control_plane.sv  npu_frontend_tile.sv  npu_gemm_accelerator.sv  npu_top.sv  npu_v2_axi_write_arbiter.sv  npu_v2_control_plane.sv  npu_v2_frontend_tile.sv  npu_v2_top.sv
rtl/localmem/: npu_data_port_arbiter.sv  npu_engine_data_arbiter.sv  npu_local_memory.sv  npu_localmem_rd_if.sv  npu_localmem_wr_if.sv  npu_v2_data_port_arbiter.sv  npu_v2_engine_data_arbiter.sv  npu_v2_local_memory.sv  npu_v2_localmem_rd_if.sv  npu_v2_localmem_wr_if.sv
rtl/matrix/: npu_matrix_engine.sv  npu_pe_i8.sv  npu_systolic_array.sv  npu_systolic_array_test_top.sv  npu_v2_matrix_engine.sv
rtl/vector/: npu_v2_vector_engine.sv  npu_vector_engine.sv
sim/: array_tb.cpp  assert_fail_tb.cpp  command_tb.cpp  common_tb.cpp  completion_writer_tb.cpp  control_plane_tb.cpp  control_tb.cpp  dma_fabric_tb.cpp  frontend_tile_tb.cpp  gemm_case_gen.hpp  gemm_tb.cpp  loader_tb.cpp  local_memory_tb.cpp  matrix_engine_tb.cpp  pe_tb.cpp  read_dma_tb.cpp  smoke_tb.cpp  tb_coverage.cpp  tb_coverage.hpp  tiling_tb.cpp  top_tb.cpp  v2_completion_writer_tb.cpp  v2_control_plane_tb.cpp  v2_control_tb.cpp  v2_dma_fabric_tb.cpp  v2_frontend_tile_tb.cpp  v2_loader_tb.cpp  v2_local_memory_tb.cpp  v2_matrix_engine_tb.cpp  v2_top_tb.cpp  v2_vector_engine_tb.cpp  vector_engine_tb.cpp  write_dma_tb.cpp
sim/model/: holon_npu_model.cpp  holon_npu_model.hpp  holon_npu_v2_model.cpp  holon_npu_v2_model.hpp
sim/rtl/common/: npu_assert_fail_test_top.sv  npu_common_smoke_top.sv  npu_smoke_top.sv
sim/rtl/control/: npu_completion_writer_test_wrapper.sv  npu_control_regs_test_wrapper.sv  npu_program_loader_test_wrapper.sv  npu_v2_completion_writer_test_wrapper.sv  npu_v2_control_regs_test_wrapper.sv  npu_v2_program_loader_test_wrapper.sv
sim/rtl/dma/: npu_axi4_read_dma_test_wrapper.sv  npu_dma_fabric_test_wrapper.sv  npu_v2_dma_fabric_test_wrapper.sv  npu_write_dma_test_top.sv
sim/rtl/integration/: npu_control_plane_test_wrapper.sv  npu_frontend_tile_test_wrapper.sv  npu_gemm_accelerator_test_wrapper.sv  npu_v2_control_plane_test_wrapper.sv  npu_v2_frontend_tile_test_wrapper.sv
sim/rtl/localmem/: npu_local_memory_test_wrapper.sv  npu_v2_local_memory_test_wrapper.sv
sim/rtl/matrix/: npu_matrix_engine_test_wrapper.sv  npu_systolic_array_test_top.sv  npu_v2_matrix_engine_test_wrapper.sv
sim/rtl/vector/: npu_v2_vector_engine_test_wrapper.sv  npu_vector_engine_test_wrapper.sv
spec/: holon_npu_abi.json  holon_npu_coverage_baseline.json  holon_npu_isa.json  holon_npu_v2_abi.json
sw/: README.md  holon_npu_driver.c  holon_npu_driver.h  holon_npu_runtime.cpp  my_npu_driver.c  my_npu_driver.h
tests/: README.md  driver_test.cpp  model_test.cpp  runtime_test.cpp  v2_model_test.cpp  v2_runtime_test.cpp
tools/: check_abi.py  check_abi_consistency.py  check_coverage.py  check_isa.py  check_macro_policy.py  check_rtl_interface_usage.py  check_v2_abi.py  gen_abi.py  gen_isa.py  gen_v2_abi.py  prepare_coverage.py
